--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brainn",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && cp build/index.html build/200.html && surge build https://brainnco.surge-sh"
   },
   "eslintConfig": {
     "extends": [
